crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_hybrid_view_vector_search_sql_w_question_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, question, trunc(_score, 3) FROM vector_search(qs_view, 'second') order by _score desc, id LIMIT 4"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                      |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs_view, Utf8("second")).id, vector_search(qs_view, Utf8("second")).question, trunc(vector_search(qs_view, Utf8("second"))._score,Int64(3))                                                     |
|               |   Sort: vector_search(qs_view, Utf8("second"))._score DESC NULLS FIRST, vector_search(qs_view, Utf8("second")).id ASC NULLS LAST, fetch=4                                                                                 |
|               |     Projection: vector_search(qs_view, Utf8("second")).id, vector_search(qs_view, Utf8("second")).question, trunc(vector_search(qs_view, Utf8("second"))._score, Int64(3)), vector_search(qs_view, Utf8("second"))._score |
|               |       TableScan: vector_search(qs_view, Utf8("second")) projection=[_score, id, question]                                                                                                                                 |
| physical_plan | ProjectionExec: expr=[id@0 as id, question@1 as question, trunc(vector_search(qs_view, Utf8("second"))._score,Int64(3))@2 as trunc(vector_search(qs_view, Utf8("second"))._score,Int64(3))]                               |
|               |   SortPreservingMergeExec: [_score@3 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                  |
|               |     SortExec: TopK(fetch=4), expr=[_score@3 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                      |
|               |       ProjectionExec: expr=[id@1 as id, question@2 as question, trunc(_score@0, 3) as trunc(vector_search(qs_view, Utf8("second"))._score,Int64(3)), _score@0 as _score]                                                  |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                              |
|               |           ProjectionExec: expr=[_score@1 as _score, id@0 as id, question@2 as question]                                                                                                                                   |
|               |             HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@0)], projection=[id@0, _score@1, question@3]                                                                 |
|               |               CoalescePartitionsExec                                                                                                                                                                                      |
|               |                 ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as _score]                                                                                                                               |
|               |                   BytesProcessedExec                                                                                                                                                                                      |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                  |
|               |                       S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                        |
|               |               SchemaCastScanExec                                                                                                                                                                                          |
|               |                 BytesProcessedExec                                                                                                                                                                                        |
|               |                   DataSourceExec: partitions=1, partition_sizes=[2]                                                                                                                                                       |
|               |                                                                                                                                                                                                                           |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
