crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_hybrid_view_vector_search_text_search_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(_score, 3) FROM text_search(qs_view, 'second') order by _score desc, id LIMIT 4"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                            |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: text_search(qs_view, Utf8("second")).id, text_search(qs_view, Utf8("second")).answer, trunc(text_search(qs_view, Utf8("second"))._score,Int64(3))                                                   |
|               |   Sort: text_search(qs_view, Utf8("second"))._score DESC NULLS FIRST, text_search(qs_view, Utf8("second")).id ASC NULLS LAST, fetch=4                                                                           |
|               |     Projection: text_search(qs_view, Utf8("second")).id, text_search(qs_view, Utf8("second")).answer, trunc(text_search(qs_view, Utf8("second"))._score, Int64(3)), text_search(qs_view, Utf8("second"))._score |
|               |       TableScan: text_search(qs_view, Utf8("second")) projection=[_score, answer, id]                                                                                                                           |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(text_search(qs_view, Utf8("second"))._score,Int64(3))@2 as trunc(text_search(qs_view, Utf8("second"))._score,Int64(3))]                             |
|               |   SortPreservingMergeExec: [_score@3 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                        |
|               |     SortExec: TopK(fetch=4), expr=[_score@3 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                            |
|               |       ProjectionExec: expr=[id@2 as id, answer@1 as answer, trunc(_score@0, 3) as trunc(text_search(qs_view, Utf8("second"))._score,Int64(3)), _score@0 as _score]                                              |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                    |
|               |           ProjectionExec: expr=[_score@1 as _score, answer@2 as answer, id@0 as id]                                                                                                                             |
|               |             HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2]                                                        |
|               |               CoalescePartitionsExec                                                                                                                                                                            |
|               |                 CooperativeExec                                                                                                                                                                                 |
|               |                   BytesProcessedExec                                                                                                                                                                            |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                        |
|               |                       FullTextSearchTableExec q=second, limit=1000                                                                                                                                              |
|               |               SchemaCastScanExec                                                                                                                                                                                |
|               |                 CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0                                                                                                                                   |
|               |                   BytesProcessedExec                                                                                                                                                                            |
|               |                     DataSourceExec: partitions=1, partition_sizes=[2]                                                                                                                                           |
|               |                                                                                                                                                                                                                 |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
