crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_hybrid_view_vector_search_text_search_w_answer.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 361,
    "answer": "The number of ways is \\( 18 \\times 17 \\times 16 = \\boxed{4896} \\).",
    "trunc(text_search(qs_view, Utf8(\"second\"))._score,Int64(3))": 5.065
  }
]
